--- a/stylesheets/syntax-variables.less
+++ b/stylesheets/syntax-variables.less
@@ -21,7 +21,7 @@
 // Gutter colors
 @syntax-gutter-text-color: @light-gray;
 @syntax-gutter-text-color-selected: @syntax-gutter-text-color;
-@syntax-gutter-background-color: @syntax-background-color;
+@syntax-gutter-background-color:  #f8f8ff;
 @syntax-gutter-background-color-selected: @syntax-selection-color;
 
 // For git diff info. i.e. in the gutter
