--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -21,6 +21,7 @@
 @gutter-background-color: @base-background-color;
 @gutter-background-color-selected: @selection-color;
 @comment-color: #999999;
+@comment-documentation: #dd1144;
 @search-results: @yellow;
 @search-result: #ccccff;
 @numbers: #009999;
