--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -1,27 +1,60 @@
-@gray-darker: lighten(#000, 13.5%); // #222
-@gray-dark: lighten(#000, 20%); // #333
-@gray: lighten(#000, 33.5%); // #555
-@gray-light: lighten(#000, 46.7%); // #777
-@gray-lighter: lighten(#000, 80%); // #eee
-@dark-blue: #000080;
-@blue: #0000ff;
-@green: #008000;
-@turquoise: #008080;
-@yellow: #ffff00;
-@base-text-color: #333;
-@base-background-color: #f8f8ff;
-@selection-color: darken(@base-background-color, 5%);
-@cursor-color: #444;
-@cursor-line-color: #ffffd7;
+
+///////////////////////
+// Color Definitions //
+///////////////////////
+
+// Base gray color
+@gray-base: #d3d3d3;
+
+// Gray variations
+@gray-10: #1a1a1a;
+@gray-20: #333333;
+@gray-30: #4d4d4d;
+@gray-40: #666666;
+@gray-50: #808080;
+@gray-60: #999999;
+@gray-70: #b3b3b3;
+@gray-80: #cccccc;
+@gray-90: #e6e6e6;
+
+@gray-lighter: #e1e1e1;
+@gray-light: #adadad;
+@gray: #777777;
+@gray-dark: #4d4d4d;
+@gray-darker: #333333;
+
+// Basic editor colors
+@editor-text: #1561ac; // @gray-darker
+@editor-background: #f8f8ff;
+@editor-cursor: #444;
+@editor-line: #ffffd7; // #fffee2
+@editor-selection: darken(@editor-background, 5%);
+@editor-search-result: #ffff00;
+@editor-search-result--active: #ccccff;
+
+// Editor guides
 @wrap-guide-color: @gray-lighter;
 @indent-guide-color: lighten(@gray-lighter, 10%);
 @invisible-character-color: @gray-light;
-@gutter-text-color: @gray-light;
-@gutter-text-color-selected: @gutter-text-color;
-@gutter-background-color: @base-background-color;
-@gutter-background-color-selected: @selection-color;
-@comment-color: #999999;
-@comment-documentation: #dd1144;
-@search-results: @yellow;
-@search-result: #ccccff;
-@numbers: #009999;
+
+// Line numbers
+@line-numbers: @gray;
+@line-numbers--selected: @gray-dark;
+@line-numbers-background: @editor-background;
+@line-numbers-background--selected: @editor-selection;
+
+// Basic syntax elements
+@default-plain-text: @gray-darker;
+@default-text: #008080;
+@default-variables: #002d7a;
+@default-entities: @default-text;
+@default-modifiers: #800080;
+@default-operators: #006fe0;
+@default-punctuations: @gray-20;
+@default-strings: #d14;
+@default-numbers: #099;
+@default-comments: @gray-60;
+@default-comments-documentation: #dd1144;
+@default-annotations: @gray-40;
+@default-meta-tags: #b85c00;
+@default-doctype: @gray;
