Java syntax style

--- a/stylesheets/js.less
+++ b/stylesheets/js.less
@@ -5,8 +5,14 @@
 ///////////////////////
 
 .js {
+
   &.source,
   .storage.modifier {
     color: @default-variables;
+  }
+
+  .keyword.operator.new {
+    color: @default-plain-text;
+    font-weight: bold;
   }
 }
