Minor YAML adjustments; added CSS/LESS syntax;

--- a/stylesheets/syntax.less
+++ b/stylesheets/syntax.less
@@ -163,6 +163,9 @@
     font-weight: bold;
   }
 
+  &.property-name {
+    font-weight: bold;
+  }
 }
 
 .entity {
@@ -176,6 +179,10 @@
 
   &.inherited-class {
     color: @default-entities;
+  }
+
+  &.attribute-name {
+    font-weight: bold;
   }
 }
 
