--- a/index.less
+++ b/index.less
@@ -3,3 +3,5 @@
 @import "stylesheets/js";
 @import "stylesheets/java";
 @import "stylesheets/yaml";
+@import "stylesheets/php";
+@import "stylesheets/css";
