--- a/stylesheets/java.less
+++ b/stylesheets/java.less
@@ -26,4 +26,11 @@
       font-weight: bold;
     }
   }
+
+  .storage.type {
+    color: @default-entities;
+  }
+  .storage.type.primitive {
+    color: @default-modifiers;
+  }
 }
