More contrast for indent guide color

--- a/stylesheets/colors.less
+++ b/stylesheets/colors.less
@@ -34,7 +34,7 @@
 
 // Editor guides
 @wrap-guide-color: @gray-lighter;
-@indent-guide-color: lighten(@gray-lighter, 10%);
+@indent-guide-color: @gray-90;
 @invisible-character-color: @gray-light;
 
 // Line numbers
