Adaptions to latest Atom version

--- a/index.less
+++ b/index.less
@@ -1,7 +1,2 @@
-@import "stylesheets/editor";
-@import "stylesheets/syntax";
-@import "stylesheets/js";
-@import "stylesheets/java";
-@import "stylesheets/yaml";
-@import "stylesheets/php";
-@import "stylesheets/css";
+@import "styles/base";
+@import "styles/lang";
